--- a/public/skin/adminhtml/default/default/boxes.css
+++ b/public/skin/adminhtml/default/default/boxes.css
@@ -64,18 +64,10 @@
     z-index:501;
     }
 #loading-mask {
-    background:url(images/blank.gif) repeat;
     position:absolute;
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
-    color:#d85909;
-    font-size:1.1em;
-    font-weight:bold;
-    text-align:center;
+    inset: 0;
     opacity:0.80;
-    z-index:1000;
+    z-index:9999;
     }
 #loading-mask .loader {
     position:fixed;
