--- a/app/design/frontend/rwd/default/template/catalogsearch/advanced/form.phtml
+++ b/app/design/frontend/rwd/default/template/catalogsearch/advanced/form.phtml
@@ -72,7 +72,7 @@
         </ul>
     </div>
     <div class="buttons-set">
-        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Search')) ?>" class="button"><span><span><?= $this->__('Search') ?></span></span></button>
+        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Search')) ?>" class="button"><?= $this->__('Search') ?></button>
     </div>
 </form>
 <script type="text/javascript">
