--- a/app/design/frontend/rwd/default/template/checkout/multishipping/overview.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/multishipping/overview.phtml
@@ -183,7 +183,7 @@
                         <div class="inner">
                             <big><?= $this->__('Grand Total:') ?> <?= $this->helper('checkout')->formatPrice($this->getTotal()) ?></big>
                             <div id="review-buttons-container">
-                                <button type="submit" title="<?= $this->quoteEscape($this->__('Place Order')) ?>" class="button btn-checkout" id="review-button"><span><span><?= $this->__('Place Order') ?></span></span></button>
+                                <button type="submit" title="<?= $this->quoteEscape($this->__('Place Order')) ?>" class="button btn-checkout" id="review-button"><?= $this->__('Place Order') ?></button>
                             </div>
                         </div>
                     </div>
