--- a/app/design/frontend/rwd/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/rwd/default/template/customer/form/forgotpassword.phtml
@@ -33,7 +33,7 @@
     </div>
     <div class="buttons-set">
         <p class="back-link"><a href="<?= $this->helper('customer')->getLoginUrl() ?>"><small>&laquo; </small><?= $this->__('Back to Login') ?></a></p>
-        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Submit')) ?>" class="button"><span><span><?= $this->__('Submit') ?></span></span></button>
+        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Submit')) ?>" class="button"><?= $this->__('Submit') ?></button>
     </div>
 </form>
 <script type="text/javascript">
