--- a/app/design/frontend/rwd/default/template/customer/form/mini.login.phtml
+++ b/app/design/frontend/rwd/default/template/customer/form/mini.login.phtml
@@ -23,7 +23,7 @@
             <label for="mini-login"><?= $this->__('Email:') ?></label><input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="login[username]" id="mini-login" class="input-text" />
             <label for="mini-password"><?= $this->__('Password:') ?></label><input type="password" name="login[password]" id="mini-password" class="input-text" autocomplete="off" />
             <div class="actions">
-                <button type="submit" class="button"><span><span><?= $this->__('Login') ?></span></span></button>
+                <button type="submit" class="button"><?= $this->__('Login') ?></button>
             </div>
         </div>
     </form>
