--- a/app/design/frontend/rwd/default/template/customer/form/resetforgottenpassword.phtml
+++ b/app/design/frontend/rwd/default/template/customer/form/resetforgottenpassword.phtml
@@ -46,7 +46,7 @@
         </ul>
     </div>
     <div class="buttons-set">
-        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Reset a Password')) ?>" class="button"><span><span><?= $this->__('Reset a Password') ?></span></span></button>
+        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Reset a Password')) ?>" class="button"><?= $this->__('Reset a Password') ?></button>
     </div>
 </form>
 <script type="text/javascript">
