--- a/app/design/frontend/rwd/default/template/email/catalog/product/list.phtml
+++ b/app/design/frontend/rwd/default/template/email/catalog/product/list.phtml
@@ -81,7 +81,7 @@ $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()]));
                                                     title="<?= $this->quoteEscape($this->__('Add to Cart')) ?>"
                                                     class="button btn-cart"
                                                     onclick="customFormSubmit('<?= $_cartUrl ?>', '<?= $_params ?>', 'post')">
-                                                <span><span><?= $this->__('Add to Cart') ?></span></span>
+                                                <?= $this->__('Add to Cart') ?>
                                             </button>
                                         </p>
                                     <?php elseif($_product->getStockItem() && $_product->getStockItem()->getIsInStock()): ?>
@@ -162,7 +162,7 @@ $_params = $this->escapeHtml(json_encode(['form_key' => $this->getFormKey()]));
                                             title="<?= $this->quoteEscape($this->__('Add to Cart')) ?>"
                                             class="button btn-cart"
                                             onclick="customFormSubmit('<?= $_cartUrl ?>', '<?= $_params ?>', 'post')">
-                                        <span><span><?= $this->__('Add to Cart') ?></span></span>
+                                        <?= $this->__('Add to Cart') ?>
                                     </button>
                                 <?php elseif($_product->getStockItem() && $_product->getStockItem()->getIsInStock()): ?>
                                     <a title="<?= $this->quoteEscape($this->__('View Details')) ?>" class="button" href="<?= $_product->getProductUrl() ?>"><?= $this->__('View Details') ?></a>
