--- a/app/design/frontend/rwd/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/rwd/default/template/newsletter/subscribe.phtml
@@ -26,7 +26,7 @@
                <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" id="newsletter" title="<?= Mage::helper('core')->quoteEscape($this->__('Sign up for our newsletter')) ?>" class="input-text required-entry validate-email" />
             </div>
             <div class="actions">
-                <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Subscribe')) ?>" class="button"><span><span><?= $this->__('Subscribe') ?></span></span></button>
+                <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Subscribe')) ?>" class="button"><?= $this->__('Subscribe') ?></button>
             </div>
         </div>
     </form>
