--- a/app/design/frontend/rwd/default/template/reports/widget/viewed/content/viewed_grid.phtml
+++ b/app/design/frontend/rwd/default/template/reports/widget/viewed/content/viewed_grid.phtml
@@ -40,7 +40,7 @@
                                         '<?= $this->getAddToCartUrlCustom($_product, [], false) ?>',
                                         '<?= $_params ?>',
                                         'post')">
-                            <span><span><?= $this->__('Add to Cart') ?></span></span>
+                            <?= $this->__('Add to Cart') ?>
                         </button>
                         <?php else: ?>
                                 <p class="availability out-of-stock"><span><?= $this->__('Out of stock') ?></span></p>
