--- a/app/design/frontend/rwd/default/template/review/form.phtml
+++ b/app/design/frontend/rwd/default/template/review/form.phtml
@@ -105,7 +105,7 @@
                 </ul>
             </div>
             <div class="buttons-set">
-                <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Submit Review')) ?>" class="button"><span><span><?= $this->__('Submit Review') ?></span></span></button>
+                <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Submit Review')) ?>" class="button"><?= $this->__('Submit Review') ?></button>
             </div>
     </form>
     <script type="text/javascript">
