--- a/app/design/frontend/rwd/default/template/sales/billing/agreements.phtml
+++ b/app/design/frontend/rwd/default/template/sales/billing/agreements.phtml
@@ -70,7 +70,7 @@
                                     <option value="<?= $code ?>"><?= $title ?></option>
                                 <?php endforeach ?>
                             </select>
-                            <button type="submit" class="button"><span><span><?= $this->__('Create...') ?></span></span></button>
+                            <button type="submit" class="button"><?= $this->__('Create...') ?></button>
                         </li>
                     </ul>
                 </div>
