--- a/app/design/frontend/rwd/default/template/sales/widget/guest/form.phtml
+++ b/app/design/frontend/rwd/default/template/sales/widget/guest/form.phtml
@@ -57,7 +57,7 @@
                        </li>
                    </ul>
                    <div class="actions">
-                       <button type="submit" title="Continue" class="button"><span><span><?= Mage::helper('sales')->__('Continue') ?></span></span></button>
+                       <button type="submit" title="Continue" class="button"><?= Mage::helper('sales')->__('Continue') ?></button>
                    </div>
                </form>
             </div>
