--- a/app/design/frontend/rwd/default/template/catalog/msrp/popup.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/msrp/popup.phtml
@@ -31,7 +31,7 @@
                 <div class="additional-addtocart-box">
                     <?= $this->getChildHtml() ?>
                 </div>
-                <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Add to Cart')) ?>" class="button btn-cart" id="map-popup-button"><span><span><?= $this->__('Add to Cart') ?></span></span></button>
+                <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Add to Cart')) ?>" class="button btn-cart" id="map-popup-button"><?= $this->__('Add to Cart') ?></button>
             </form>
         </div>
         <script type="text/javascript">
