--- a/app/design/frontend/rwd/default/template/catalog/product/compare/sidebar.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/product/compare/sidebar.phtml
@@ -36,7 +36,7 @@ $_items = $_helper->getItemCount() > 0 ? $_helper->getItemCollection() : null;
         <?php endforeach ?>
         </ol>
         <div class="actions">
-            <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Compare')) ?>" class="button" onclick="popWin('<?= $_helper->getListUrl() ?>','compare','top:0,left:0,width=820,height=600,resizable=yes,scrollbars=yes')"><span><span><?= $this->__('Compare') ?></span></span></button>
+            <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Compare')) ?>" class="button" onclick="popWin('<?= $_helper->getListUrl() ?>','compare','top:0,left:0,width=820,height=600,resizable=yes,scrollbars=yes')"><?= $this->__('Compare') ?></button>
             <a href="<?= $_helper->getClearListUrl() ?>" onclick="return confirm('<?= Mage::helper('core')->jsQuoteEscape($this->__('Are you sure you would like to remove all products from your comparison?')) ?>');"><?= $this->__('Clear All') ?></a>
         </div>
     <?php else: ?>
