--- a/app/design/frontend/rwd/default/template/catalog/product/widget/new/content/new_list.phtml
+++ b/app/design/frontend/rwd/default/template/catalog/product/widget/new/content/new_list.phtml
@@ -28,7 +28,7 @@
                         <?= $this->getReviewsSummaryHtml($_product, 'short') ?>
                         <?= $this->getPriceHtml($_product, true, '-widget-new-list') ?>
                         <?php if ($_product->isSaleable()): ?>
-                            <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Add to Cart')) ?>" class="button btn-cart" onclick="setLocation('<?= $this->getAddToCartUrl($_product) ?>')"><span><span><?= $this->__('Add to Cart') ?></span></span></button>
+                            <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Add to Cart')) ?>" class="button btn-cart" onclick="setLocation('<?= $this->getAddToCartUrl($_product) ?>')"><?= $this->__('Add to Cart') ?></button>
                         <?php else: ?>
                             <p class="availability out-of-stock"><span><?= $this->__('Out of stock') ?></span></p>
                         <?php endif ?>
