--- a/app/design/frontend/rwd/default/template/checkout/cart/item/configure/updatecart.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/cart/item/configure/updatecart.phtml
@@ -22,7 +22,7 @@
         </div>
         <?php endif ?>
         <div class="add-to-cart-buttons">
-            <button type="button" title="<?= Mage::helper('core')->quoteEscape($buttonTitle) ?>" class="button btn-cart" onclick="productAddToCartForm.submit(this)"><span><span><?= $buttonTitle ?></span></span></button>
+            <button type="button" title="<?= Mage::helper('core')->quoteEscape($buttonTitle) ?>" class="button btn-cart" onclick="productAddToCartForm.submit(this)"><?= $buttonTitle ?></button>
             <?= $this->getChildHtml('', true, true) ?>
         </div>
     </div>
