--- a/app/design/frontend/rwd/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/cart/item/default.phtml
@@ -204,7 +204,7 @@ $_deleteUrl = $this->getDeleteUrlCustom(false);
                data-cart-item-id="<?= $this->jsQuoteEscape($_item->getSku()) ?>"
                title="<?= Mage::helper('core')->quoteEscape($this->__('Qty')) ?>" class="input-text qty" maxlength="12" />
 
-        <button type="submit" name="update_cart_action" data-cart-item-update value="update_qty" title="<?= Mage::helper('core')->quoteEscape($this->__('Update')) ?>" class="button btn-update"><span><span><?= $this->__('Update') ?></span></span>
+        <button type="submit" name="update_cart_action" data-cart-item-update value="update_qty" title="<?= Mage::helper('core')->quoteEscape($this->__('Update')) ?>" class="button btn-update"><?= $this->__('Update') ?>
         </button>
 
         <ul class="cart-links">
