--- a/app/design/frontend/rwd/default/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/cart/sidebar.phtml
@@ -58,7 +58,7 @@
     <?php if($_cartQty && $this->isPossibleOnepageCheckout()): ?>
         <div class="actions">
             <?= $this->getChildHtml('extra_actions') ?>
-            <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Checkout')) ?>" class="button" onclick="setLocation('<?= $this->getCheckoutUrl() ?>')"><span><span><?= $this->__('Checkout') ?></span></span></button>
+            <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Checkout')) ?>" class="button" onclick="setLocation('<?= $this->getCheckoutUrl() ?>')"><?= $this->__('Checkout') ?></button>
         </div>
     <?php endif ?>
     </div>
