--- a/app/design/frontend/rwd/default/template/checkout/multishipping/addresses.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/multishipping/addresses.phtml
@@ -23,7 +23,7 @@
     <div class="multiple-checkout">
         <div class="page-title title-buttons">
             <h1><?= $this->__('Ship to Multiple Addresses') ?></h1>
-            <button data-action="add-new-customer-address" type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Enter a New Address')) ?>" class="button" onclick="$('add_new_address_flag').value=1; $('checkout_multishipping_form').submit();"><span><span><?= $this->__('Enter a New Address') ?></span></span></button>
+            <button data-action="add-new-customer-address" type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Enter a New Address')) ?>" class="button" onclick="$('add_new_address_flag').value=1; $('checkout_multishipping_form').submit();"><?= $this->__('Enter a New Address') ?></button>
         </div>
         <input type="hidden" name="continue" value="0" id="can_continue_flag" />
         <input type="hidden" name="new_address" value="0" id="add_new_address_flag" />
@@ -47,7 +47,7 @@
                     <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Update Qty &amp; Addresses')) ?>"
                             class="button" onclick="$('can_continue_flag').value=0"
                             data-multiship-item-update>
-                        <span><span><?= $this->__('Update Qty &amp; Addresses') ?></span></span>
+                        <?= $this->__('Update Qty &amp; Addresses') ?>
                     </button>
                 </td>
             </tr>
@@ -67,7 +67,7 @@
         </table>
         <div class="buttons-set">
             <p class="back-link"><a href="<?= $this->getBackUrl() ?>"><small>&laquo; </small><?= $this->__('Back to Shopping Cart') ?></a></p>
-            <button type="submit" data-action="checkout-continue-shipping" title="<?= Mage::helper('core')->quoteEscape($this->__('Continue to Shipping Information')) ?>" class="button<?php if ($this->isContinueDisabled()):?> disabled<?php endif ?>" onclick="$('can_continue_flag').value=1"<?php if ($this->isContinueDisabled()):?> disabled="disabled"<?php endif ?>><span><span><?= $this->__('Continue to Shipping Information') ?></span></span></button>
+            <button type="submit" data-action="checkout-continue-shipping" title="<?= Mage::helper('core')->quoteEscape($this->__('Continue to Shipping Information')) ?>" class="button<?php if ($this->isContinueDisabled()):?> disabled<?php endif ?>" onclick="$('can_continue_flag').value=1"<?php if ($this->isContinueDisabled()):?> disabled="disabled"<?php endif ?>><?= $this->__('Continue to Shipping Information') ?></button>
         </div>
     </div>
     <?= $this->getBlockHtml('formkey') ?>
