--- a/app/design/frontend/rwd/default/template/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/rwd/default/template/checkout/onepage/shipping.phtml
@@ -123,7 +123,7 @@
     </ul>
     <div class="buttons-set" id="shipping-buttons-container">
         <p class="back-link"><a href="#" onclick="checkout.back(); return false;"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
-        <button type="button" class="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Continue')) ?>" onclick="shipping.save()"><span><span><?= $this->__('Continue') ?></span></span></button>
+        <button type="button" class="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Continue')) ?>" onclick="shipping.save()"><?= $this->__('Continue') ?></button>
         <span id="shipping-please-wait" class="please-wait" style="display:none;">
             <img src="<?= $this->getSkinUrl('images/loading.svg') ?>" alt="<?= Mage::helper('core')->quoteEscape($this->__('Loading next step...')) ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Loading next step...')) ?>" class="v-middle" /> <?= $this->__('Loading next step...') ?>
         </span>
