--- a/app/design/frontend/rwd/default/template/contacts/form.phtml
+++ b/app/design/frontend/rwd/default/template/contacts/form.phtml
@@ -51,7 +51,7 @@
         </ul>
     </div>
     <div class="buttons-set">
-        <button type="submit" title="<?= Mage::helper('core')->quoteEscape(Mage::helper('contacts')->__('Submit')) ?>" class="button"><span><span><?= Mage::helper('contacts')->__('Submit') ?></span></span></button>
+        <button type="submit" title="<?= Mage::helper('core')->quoteEscape(Mage::helper('contacts')->__('Submit')) ?>" class="button"><?= Mage::helper('contacts')->__('Submit') ?></button>
     </div>
 </form>
 <script type="text/javascript">
