--- a/app/design/frontend/rwd/default/template/customer/form/address.phtml
+++ b/app/design/frontend/rwd/default/template/customer/form/address.phtml
@@ -116,7 +116,7 @@
     </div>
     <div class="buttons-set">
         <p class="back-link"><a href="<?= $this->getUrl('customer/address/') ?>"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
-        <button type="submit" class="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Save Address')) ?>"><span><span><?= $this->__('Save Address') ?></span></span></button>
+        <button type="submit" class="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Save Address')) ?>"><?= $this->__('Save Address') ?></button>
     </div>
 </form>
 <script type="text/javascript">
