--- a/app/design/frontend/rwd/default/template/customer/form/changepassword.phtml
+++ b/app/design/frontend/rwd/default/template/customer/form/changepassword.phtml
@@ -52,7 +52,7 @@
 </div>
 <div class="buttons-set">
     <p class="back-link"><a href="<?= $this->getUrl('customer/account') ?>"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
-    <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Save Password')) ?>" class="button"><span><span><?= $this->__('Save Password') ?></span></span></button>
+    <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Save Password')) ?>" class="button"><?= $this->__('Save Password') ?></button>
 </div>
 </form>
 <script type="text/javascript">
