--- a/app/design/frontend/rwd/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/rwd/default/template/customer/form/edit.phtml
@@ -86,7 +86,7 @@
     </div>
     <div class="buttons-set">
         <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
-        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Save')) ?>" class="button"><span><span><?= $this->__('Save') ?></span></span></button>
+        <button type="submit" title="<?= Mage::helper('core')->quoteEscape($this->__('Save')) ?>" class="button"><?= $this->__('Save') ?></button>
     </div>
 </form>
 <script type="text/javascript">
