--- a/app/design/frontend/rwd/default/template/page/print.phtml
+++ b/app/design/frontend/rwd/default/template/page/print.phtml
@@ -26,7 +26,7 @@
     </div>
     <?= $this->getChildHtml('content') ?>
     <div class="buttons-set">
-        <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Close Window')) ?>" class="button" onclick="window.close();"><span><span><?= $this->__('Close Window') ?></span></span></button>
+        <button type="button" title="<?= Mage::helper('core')->quoteEscape($this->__('Close Window')) ?>" class="button" onclick="window.close();"><?= $this->__('Close Window') ?></button>
     </div>
     <?= $this->getAbsoluteFooter() ?>
 </div>
