--- a/app/design/frontend/rwd/default/template/sales/billing/agreement/view.phtml
+++ b/app/design/frontend/rwd/default/template/sales/billing/agreement/view.phtml
@@ -14,7 +14,7 @@
 <div class="page-title title-buttons billing-agreement-view-header-wrapper">
     <h1 class="heading"><?= $this->__('Billing Agreement # %s', $this->escapeHtml($this->getReferenceId())) ?></h1>
     <?php if ($this->getCanCancel()): ?>
-        <button type="button" title="<?= $this->quoteEscape($this->__('Cancel')) ?>" class="button" onclick="if( confirm('<?= $this->jsQuoteEscape($this->__('Are you sure you want to do this?')) ?>') ) { window.location.href = '<?= $this->getCancelUrl() ?>'; } return false;"><span><span><?= $this->__('Cancel') ?></span></span></button>
+        <button type="button" title="<?= $this->quoteEscape($this->__('Cancel')) ?>" class="button" onclick="if( confirm('<?= $this->jsQuoteEscape($this->__('Are you sure you want to do this?')) ?>') ) { window.location.href = '<?= $this->getCancelUrl() ?>'; } return false;"><?= $this->__('Cancel') ?></button>
     <?php endif ?>
 </div>
 <?= $this->getMessagesBlock()->toHtml() ?>
