--- a/app/design/frontend/rwd/default/template/wishlist/button/update.phtml
+++ b/app/design/frontend/rwd/default/template/wishlist/button/update.phtml
@@ -14,5 +14,5 @@
 ?>
 
 <?php if($this->getWishlist()->getItemsCount()): ?>
-    <button type="submit" name="do" title="<?= Mage::helper('core')->quoteEscape($this->__('Update Wishlist')) ?>" class="button btn-update button-secondary"><span><span><?= $this->__('Update Wishlist') ?></span></span></button>
+    <button type="submit" name="do" title="<?= Mage::helper('core')->quoteEscape($this->__('Update Wishlist')) ?>" class="button btn-update button-secondary"><?= $this->__('Update Wishlist') ?></button>
 <?php endif ?>
