--- a/app/design/frontend/rwd/default/template/wishlist/shared.phtml
+++ b/app/design/frontend/rwd/default/template/wishlist/shared.phtml
@@ -48,7 +48,7 @@
                     <td class="a-center">
                     <?php if ($product->isSaleable()): ?>
                         <?php if ($isVisibleProduct): ?>
-                            <button type="button" title="<?= $this->quoteEscape($this->__('Add to Cart')) ?>" onclick="setLocation('<?= $this->getSharedItemAddToCartUrl($item) ?>')" class="button btn-cart"><span><span><?= $this->__('Add to Cart') ?></span></span></button>
+                            <button type="button" title="<?= $this->quoteEscape($this->__('Add to Cart')) ?>" onclick="setLocation('<?= $this->getSharedItemAddToCartUrl($item) ?>')" class="button btn-cart"><?= $this->__('Add to Cart') ?></button>
                         <?php endif ?>
                     <?php endif ?>
                         <p>
@@ -70,7 +70,7 @@
         <div class="buttons-set">
             <p class="back-link"><a href="<?= $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?= $this->__('Back') ?></a></p>
             <?php if($this->isSaleable()):?>
-                <button type="button" title="<?= $this->quoteEscape($this->__('Add All to Cart')) ?>" onclick="setLocation('<?= $this->getUrl('*/*/allcart', ['_current'=>true]) ?>')" class="button"><span><span><?= $this->__('Add All to Cart') ?></span></span></button>
+                <button type="button" title="<?= $this->quoteEscape($this->__('Add All to Cart')) ?>" onclick="setLocation('<?= $this->getUrl('*/*/allcart', ['_current'=>true]) ?>')" class="button"><?= $this->__('Add All to Cart') ?></button>
             <?php endif ?>
         </div>
     </form>
